# ai_game

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  README.md  game_scores.db  hello.py  pyproject.toml
.github/workflows/: static.yml
docs/: conf.py  index.rst
docs/source/: background.md  conf.py  game.md  index.rst  modules.rst  readme.md  snake.rst
src/: main.py
src/ai_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/snake/: __init__.py  enemy_snake.py  food.py  game.py  models.py  settings.py  snake.py  ui.py  wall.py
src/snake/data/: game_scores.db
src/tetris/: game.py
tests/: test_enemy_snake.py  test_food.py  test_game.py  test_settings.py  test_snake.py  test_ui.py
