[project]
name = "ai-game"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.20.3",
    "myst-parser>=3.0.1",
    "pygame>=2.6.1",
    "pylint>=3.3.3",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
