[project]
name = "ai-game"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.20.3",
    "myst-parser>=3.0.1",
    "pygame>=2.6.1",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["setuptools>=42", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ai-game",
]

[tool.uv.sources]
ai-game = { workspace = true }
